* Switched off support for stealth addresses
* Client: do not try to commit a block until all off its parents are done - added HasAllParents() method
* Client: CommitBlock() returns error, discard all the blocks that depend on it - added network.DiscardedBlocks
* Wallet: "-p2sh <hex>" command can be used with "-input <int>" to alter only a single input of the transaction

1.6.4 - 2016-06-27
* Use trully volatile, quickly switachable wallets from WebUI (requires 1.5GB more RAM)
* Changed the first parameter to NotifyTxDel() to be more descriptive (than just TxID)
* Do not use VER_LOW_S for now (to verify mempool txs) as it is baning some peers
* Enforce CVS verification for blocks height 417312 or higher (not for testnet)
* Implemented BIP113 (Median time-past as endpoint for lock-time calculations)
* New TextUI command "bip9" - extracts BIP9 relevant info from the current chain

1.6.3 - 2016-05-28
* Lib: Inteface to TheBlueMatt's block_validator tests - see https://github.com/piotrnar/btc_block_validator
* WebUI/Miners: Removed BIP100 voting stats
* WebUI/Miners: Block version numbers are shown in a table, from a span of the consensus window
* Wallet: use sequence value of 0 for RBF type transactions (instead of unix timestamp as before)
* WebUI/MakeTx: Default sequence value changed to 0 and added "Final" checkbox
* WebUI/Transactions: Shows processing time of the txs and which are RBF enabled (non-final)
* Client: Implemented Replace-By-Fee for the memory pool
* Removed support for "alert" messages
* Tools/fetchtx: updated to the latest block explorers API
* Lib/script: added support for OP_CHECKSEQUENCEVERIFY opcode (enabled by VER_CSV flag) - BIP-112
* Lib/script: added support for all core's verification flags and updated the test suite to the latest one
* New tool "verify_tx.go", usefull for debugging scripts

1.6.2 - 2016-04-12
* Client: fixed crash on calling the consensus lib with empty pkscript